--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,27 +1,4 @@
-<nav class="navbar navbar-expand-sm navbar-light bg-light">
-  <div class="container">
-    <a class="navbar-brand" routerLink="/"  >Anguler</a>
-    <div class="collapse navbar-collapse" id="collapsibleNavId">
-      <ul class="navbar-nav me-auto mt-2 mt-lg-0">
-        <li class="nav-item">
-          <a class="nav-link"  routerLinkActive="active"  routerLink="/products" aria-current="page" >Home</a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link"  routerLinkActive="active"  routerLink="/start" aria-current="page" >Start</a>
-        </li>
-        
-      </ul>
-      <form class="d-flex my-2 my-lg-0">
-        <input class="form-control me-sm-2" type="text" placeholder="Search" />
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
-          Search
-        </button>
-      </form>
-    </div>
-    
-  </div>
-</nav>
+<app-header></app-header>
 
 
 <router-outlet></router-outlet>
