--- a/src/app/page/not-found/not-found.component.html
+++ b/src/app/page/not-found/not-found.component.html
@@ -13,7 +13,7 @@
                     How you got here is a mystery. But you can click the button below
                     to go back to the homepage.
                 </p>
-                <a routerLink="" class="btn btn-info">HOME</a>
+                <a routerLink="/home" class="btn btn-info">HOME</a>
             </div>
         </div>
     </div>
