--- a/src/app/page/products/products-detail/products-detail.component.html
+++ b/src/app/page/products/products-detail/products-detail.component.html
@@ -1,4 +1,5 @@
-  <div class="container mt-5">
+<app-header></app-header>
+<div class="container mt-5">
     <div class="row d-flex justify-content-center">
         <div class="card " style="width: 18rem;">
             <img src="{{result.imageUrl}}" class="card-img-top" alt="">
@@ -8,7 +9,7 @@
               <span class="card-text">Description: {{result.description}}</span><br/>
               <span class="card-text">ReleaseDate: {{result.releaseDate}}</span><br/>
               <span class="card-text">Price: {{result.price}}</span><br/>
-              <span class="card-text start">Star Rating: <app-star [rating]="result.starRating"></app-star></span>
+              <!-- <span class="card-text start">Star Rating: <app-star [rating]="result.starRating"></app-star></span> -->
               <a routerLink="/products" class="btn btn-primary">Back</a>
             </div>
           </div>
