--- a/src/app/page/products/products.component.html
+++ b/src/app/page/products/products.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div class="container-fluid">
     <div class="container">
         <div class="row">
@@ -25,17 +26,17 @@
                 <td  class="table-danger">{{ pro.price }}</td>
                 
                 <td scope="row">
-                   <app-star [rating]="pro.starRating"></app-star>
+                   <!-- <app-star [rating]="pro.starRating"></app-star> -->
                 </td>
                 <td>
-                  <a routerLink="{{pro.productId}}" class="btn btn-info">Chi tiết</a>
+                  <!-- <a routerLink="{{pro.productId}}" class="btn btn-info">Chi tiết</a> -->
                 </td>
               </tr>
             </tbody>
           </table>
         </div>
       </div>
-    <router-outlet></router-outlet>
+    <!-- <router-outlet></router-outlet> -->
 </div>
 
 <script>
