--- a/src/app/page/home/home.component.html
+++ b/src/app/page/home/home.component.html
@@ -1,1 +1,9 @@
-<div class="body"></div>
+<app-header></app-header>
+<div class="body">
+
+    <div class="container">
+        <div class="row text-center">
+            <h1 class="text-danger mt-5">Hello, it my Home!</h1>
+        </div>
+    </div>
+</div>
