--- a/src/app/page/star/star.component.html
+++ b/src/app/page/star/star.component.html
@@ -1,3 +1,4 @@
+<!-- <app-header></app-header> -->
 <div (click)="onClick()" class="crop" style="height: 20px;" [style.width.px]="StartWith">
     <i class="bi bi-star-fill"></i>
     <i class="bi bi-star-fill"></i>
