--- a/src/app/page/products/products.component.html
+++ b/src/app/page/products/products.component.html
@@ -26,10 +26,10 @@
                 <td  class="table-danger">{{ pro.price }}</td>
                 
                 <td scope="row">
-                   <!-- <app-star [rating]="pro.starRating"></app-star> -->
+                   <app-star [rating]="pro.starRating"></app-star>
                 </td>
                 <td>
-                  <!-- <a routerLink="{{pro.productId}}" class="btn btn-info">Chi tiết</a> -->
+                  <a routerLink="{{pro.productId}}" class="btn btn-info">Chi tiết</a>
                 </td>
               </tr>
             </tbody>
