--- a/src/app/page/header/header.component.html
+++ b/src/app/page/header/header.component.html
@@ -10,6 +10,9 @@
           <li class="nav-item">
             <a class="nav-link"  routerLinkActive="active"  routerLink="/start" aria-current="page" >Start</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link"  routerLinkActive="active"  routerLink="/unit" aria-current="page" >Unit</a>
+          </li>
           
         </ul>
         <form class="d-flex my-2 my-lg-0">
