--- a/src/app/page/unit/unit.component.html
+++ b/src/app/page/unit/unit.component.html
@@ -25,7 +25,7 @@
                                 <td scope="row">{{item.name}}</td>
                                 <td>{{item.address}}</td>
                                 <td class=''>
-                                    <button  data-toggle="modal" data-target="#exampleModal" class="btn btn-danger" id="{{item.id}}" (click)="deleteUnit(item.id)"><i class="bi bi-trash"></i></button>
+                                    <button  data-toggle="modal" data-target="#exampleModal" class="btn btn-danger" id="{{item.id}}"><i class="bi bi-trash"></i></button>
                                     <button class="btn btn-info mx-4" id="{{item.id}}" (click)="getOneUnit(item.id)"><i class="bi bi-file-earmark"></i></button>
                                 </td>
                             </tr>
@@ -33,10 +33,20 @@
                     </table>
                 </div>
             </div>
+            <div class="d-flex justify-content-center">
             <!-- <ng-template #elseBlock>Content to render when condition is false.</ng-template> -->
+            <app-paginator 
+                [current_page]="cur_Page"
+                [last_page]="last_Page"
+                [api_url] ='API_URL'
+                (dataList)="getPage($event)"
+            ></app-paginator>
+        </div>
         </div>
     </div>
 </div>
+
+
 
 
 <div class="container">
